--- a/WebContent/game/mapView.xhtml
+++ b/WebContent/game/mapView.xhtml
@@ -31,7 +31,7 @@
 	<div id="indicadores" >
 
 		<applet id="mapLudens" classloader_cache="false"
-			type="application/x-java-applet" archive="mapita1.jar"
+			type="application/x-java-applet" archive="m.jar"
 			code="co.edu.udea.ludens.applet.gui.MapDashboard.class"
 			codebase="#{ludensUtilBean.urlBase}/applets/" width="750px"
 			height="780px">
