--- a/Web/WebContent/game/mapView.xhtml
+++ b/Web/WebContent/game/mapView.xhtml
@@ -4,64 +4,48 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ice="http://www.icesoft.com/icefaces/component"
-	xmlns:ice-cc="http://www.icesoft.com/icefaces-composite-comps">
+	xmlns:ice-cc="http://www.icesoft.com/icefaces-composite-comps" >
 
-<head>
+	<head>
+		<ice:outputStyle href="../xmlhttp/css/rime/rime.css" id="outputStyle1" />
+		<ice:outputStyle href="../xmlhttp/css/game/game.css" id="outputStyle2" />
+	</head>
 
-<ice:outputStyle href="../xmlhttp/css/rime/rime.css" id="outputStyle1" />
-<ice:outputStyle href="../xmlhttp/css/game/game.css" id="outputStyle2" />
+	<body>
+		<div id="trade" class="tab_content" >
 
-
-</head>
-
-
-
-<body>
-
-<div id="trade" class="tab_content">
-
-	<h4 id="title_maps"
-		style="color: #222222; background-color: #f5b604; -moz-border-radius: 5px 5px 5px 5px; border: 2px solid #f5b604; width: 100%">Mapa
-	</h4>
-
-<div id="content" >
-
-
-
-	<div id="indicadores" >
-
-		<applet id="mapLudens" classloader_cache="false"
-			type="application/x-java-applet" archive="m.jar"
-			code="co.edu.udea.ludens.applet.gui.MapDashboard.class"
-			codebase="#{ludensUtilBean.urlBase}/applets/" width="750px"
-			height="780px">
-
-			<param name="login" value="#{userSession.user.login}" />
-			<param name="urlBase" value="#{ludensUtilBean.urlBase}" />
-
-		</applet>
-
-	</div>
-
-	<div id="notificaciones"  >
-                                              
-        <h4>      Notificaciones  </h4>
-              <ice:panelSeries id="psMsgs"  style="overflow:auto;height: 700px; width: 160px;"  var="message" value="#{messagesBean.messages}"  >
-                             
-              <div  class="#{message.msgType}" >                                 
-              #{message.msg}                   
-              </div>                                 
-            </ice:panelSeries>         
+			<h4 id="title_maps"
+				style="color: #222222; background-color: #f5b604;
+				-moz-border-radius: 5px 5px 5px 5px; border: 2px solid #f5b604; width: 100%" >Mapa
+			</h4>
 	
-	</div>
-	
-	</div>
-	
-	</div>
+			<div id="content" >
+				<div id="indicadores" >
+					<applet id="mapLudens" classloader_cache="false"
+						type="application/x-java-applet" archive="m.jar"
+						code="co.edu.udea.ludens.applet.gui.MapDashboard.class"
+						codebase="#{ludensUtilBean.urlBase}/applets/" width="750px"
+						height="780px" >
 
+						<param name="login" value="#{userSession.user.login}" />
+
+						<param name="urlBase" value="#{ludensUtilBean.urlBase}" />	
+					</applet>
+				</div>
 	
+				<div id="notificaciones" >
+					<h4>Notificaciones</h4>
 
-	<ui:include border="0" src="./comunicationView.xhtml" />
+					<ice:panelSeries id="psMsgs"
+						style="overflow:auto;height: 700px; width: 160px;" var="message"
+						value="#{messagesBean.messages}" >
 
-</body>
+						<div class="#{message.msgType}" >#{message.msg}</div>
+					</ice:panelSeries>
+				</div>
+			</div>
+		</div>	
+
+		<ui:include border="0" src="./comunicationView.xhtml" />
+	</body>
 </html>
