--- a/Web/WebContent/game/mapView.xhtml
+++ b/Web/WebContent/game/mapView.xhtml
@@ -22,7 +22,7 @@
 			<div id="content" >
 				<div id="indicadores" >
 					<applet id="mapLudens" classloader_cache="false"
-						type="application/x-java-applet" archive="mapita1.jar"
+						type="application/x-java-applet" archive="mapa.jar"
 						code="co.edu.udea.ludens.applet.gui.MapDashboard.class"
 						codebase="#{ludensUtilBean.urlBase}/applets/" width="750px"
 						height="780px" >
